--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,11 @@ dependencies {
 
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
+
+    def glide_version = "4.11.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
 
 }
