--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,11 @@ dependencies {
     implementation "android.arch.lifecycle:common-java8:1.1.1"
 
     //Dagger hilt
-    def hilt_version = "2.28-alpha"
+    def hilt_version = "2.37"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    def hilt_lifecycle_version = "1.0.0-alpha02"
+    def hilt_lifecycle_version = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_version"
 
